--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -40,11 +40,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Renueva tu estilo, revive tu ropa: moda de segunda mano, una elección con conciencia.</h1>
+                        <h1 class="text-white font-weight-bold">Renueva tu estilo, revive tu ropa.</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Encuentra todo lo que quieras aqui y mucho mas!</p>
+                        <p class="text-white-75 mb-5"> Moda de segunda mano, una elección con conciencia</p>
                         <a class="btn btn-primary btn-xl" href="#about">Encuentralo aqui</a>
                     </div>
                 </div>
