--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -55,10 +55,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Tenemos todo lo que necesitas</h2>
+                        <h2 class="text-white mt-0">Encuentra aqui</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Echa un vistazo!</p>
-                        <a class="btn btn-light btn-xl" href="#services">COMIENZA</a>
+                       <!-- <a class="btn btn-light btn-xl" href="#services">COMIENZA</a> -->
                     </div>
                 </div>
             </div>
