--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Creative - Start Bootstrap Theme</title>
-        <!-- Favicon-->
+        <!--Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -111,7 +111,7 @@
     
                 <div class="flip-card">
                     <div class="flip-card-inner">
-                        <div class="flip-card-front" style="background-image: url('https://i.pinimg.com/564x/51/c3/5d/51c35def59be21640dcd04a9c7d037ae.jpg');">
+                        <div class="flip-card-front" style="background-image: url('https://img.freepik.com/vector-gratis/fondo-oscuro-invitacion-premium_1017-8497.jpg?w=826&t=st=1701221747~exp=1701222347~hmac=3895be18b2f14dcabe6d0da01f065c7ed18e641ea499ea633b2e18b2159a193d');">
     
                         </div>
                         <div class="flip-card-back">
