--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -93,7 +93,7 @@
     
                         </div>
                         <div class="flip-card-back">
-                            Studio Ghibli, dirigida y creada por Hayao Miyazaki en 1988. Tras realizar esta película, se adoptó como logotipo del estudio a los Totoros. Es la tercera película del estudio tras su fundación.
+                            Accede a una experiencia premium con nuestra categoría VIP, donde miembros selectos disfrutan de lo último en moda de segunda mano con beneficios exclusivos y acceso anticipado a colecciones especiales.
                         </div>
                     </div>
                 </div>
