--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -111,7 +111,7 @@
     
                 <div class="flip-card">
                     <div class="flip-card-inner">
-                        <div class="flip-card-front" style="background-image: url('https://img.freepik.com/vector-gratis/fondo-oscuro-invitacion-premium_1017-8497.jpg?w=826&t=st=1701221747~exp=1701222347~hmac=3895be18b2f14dcabe6d0da01f065c7ed18e641ea499ea633b2e18b2159a193d');">
+                        <div class="flip-card-front" style="background-image: url('https://images.pexels.com/photos/3850512/pexels-photo-3850512.jpeg');">
     
                         </div>
                         <div class="flip-card-back">
