--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -72,6 +72,7 @@
     
                         </div>
                         <div class="flip-card-back">
+                            Estilos Clásicos
                             Explora prendas atemporales que resisten las tendencias efímeras, añadiendo un toque de elegancia a tu armario.
                         </div>
                     </div>
