--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -72,8 +72,9 @@
     
                         </div>
                         <div class="flip-card-back">
-                            Estilos Clásicos
-                            Explora prendas atemporales que resisten las tendencias efímeras, añadiendo un toque de elegancia a tu armario.
+                            
+                           Estilos Clásicos <br>
+                           Explora prendas atemporales que resisten las tendencias efímeras, añadiendo un toque de elegancia a tu armario.
                         </div>
                     </div>
                 </div>
