--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="flip-card-back">
                             
-                           Estilos Clásicos <br>
+                           <h1> Estilos Clásicos </h1> 
                            Explora prendas atemporales que resisten las tendencias efímeras, añadiendo un toque de elegancia a tu armario.
                         </div>
                     </div>
