--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -73,8 +73,8 @@
                         </div>
                         <div class="flip-card-back">
                             
-                           <h1> Estilos Clásicos </h1> 
-                           Explora prendas atemporales que resisten las tendencias efímeras, añadiendo un toque de elegancia a tu armario.
+                           <h1> Estilos Clásicos </h1> <br />
+                          Explora prendas atemporales que resisten las tendencias efímeras, añadiendo un toque de elegancia a tu armario.
                         </div>
                     </div>
                 </div>
