--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5"> Moda de segunda mano, una elección con conciencia</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Encuentralo aqui</a>
+                        <a class="btn btn-primary btn-xl" href="About-Us-main/index.html">Encuentralo aqui</a>
                     </div>
                 </div>
             </div>
