--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -127,6 +127,21 @@
                 </div>
             </div>
         </section>
+         <section class="page-section bg-primary" id="about">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Viste con Conciencia</h2> <br />
+                        
+                        <p class="text-white-75 mb-4">La moda rápida y desechable ha dejado un rastro de contaminación ambiental. En "Moda Limpia", te sumergirás en un mundo donde cada elección de vestimenta se convierte en un acto consciente. 
+                        Descubre cómo tus decisiones de moda pueden ser una poderosa herramienta para reducir la contaminación y abrazar un estilo más ético.</p> 
+                        
+                        <p class="text-white-75 mb-4"></p>
+                       <!-- <a class="btn btn-light btn-xl" href="#services">COMIENZA</a> -->
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="page-section" id="services">
             <div class="cards-grid">
                 <div class="flip-card">
