--- a/Eco-vestir/index.html
+++ b/Eco-vestir/index.html
@@ -18,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/9b946afa88.js" crossorigin="anonymous"></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -31,6 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#services">Categorias</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Productos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+                        <li class="fa-solid fa-cart-shopping"><a class="nav-link" href="/carrito-de-compras-main/index.html"></a></li>
                     </ul>
                 </div>
             </div>
